# APIArtist

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: dev.yml  main.yml  production.yml  staging.yml  test.yml
src/: api.py  config.py  main.py
src/apigenerator/: enums.py  models.py  repository.py  router.py  schema.py
src/authx/: auth.py  models.py  repository.py  router.py  schema.py
src/core/: repository.py  router.py  service.py
src/database/: mongodb.py  redis.py
src/project/: models.py  repository.py  router.py  schema.py
src/utils/: models.py
